# IR2134

./: .gitignore  README.md
buildings/: roscon.building.yaml  roscon.world
buildings/models/roscon_L2/: model.sdf
buildings/roscon_world/roscon_L1/: model.config
buildings/roscon_world/roscon_L1/meshes/: model.material
buildings/roscon_world/roscon_L2/: model.config
exam_ws/: README.md
exam_ws/src/rmf_library/: .rmf_schedule_node.yaml  CMakeLists.txt  package.xml
exam_ws/src/rmf_library/config/: CMakeLists.txt  cleanerBotA_config.yaml  package.xml
exam_ws/src/rmf_library/config/launch/: library.launch.xml
exam_ws/src/rmf_library/fleet_adapter/: package.xml  setup.cfg  setup.py
exam_ws/src/rmf_library/fleet_adapter/launch/: fleet_adapter.launch.xml
exam_ws/src/rmf_library/launch/: CMakeLists.txt  library.launch.xml  package.xml  simulation.launch.xml
exam_ws/src/rmf_library/launch/launch/: library.launch.xml  simulation.launch.xml
exam_ws/src/rmf_library/maps/: CMakeLists.txt  package.xml
rmf_ws/: README.md
rmf_ws/src/project/: .rmf_schedule_node.yaml
rmf_ws/src/project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rmf_ws/src/project/log/: latest_build
rmf_ws/src/project/project_config/: CMakeLists.txt  package.xml
rmf_ws/src/project/project_config/config/roscon/: tinyRobot_config.yaml
rmf_ws/src/project/project_config/config/td/: cleanerBotA_config.yaml  tinyRobot_config.yaml
rmf_ws/src/project/project_config/config/test1/: tinyRobot_config.yaml
rmf_ws/src/project/project_config/launch/: common.launch.xml  roscon.launch.xml  td.launch.xml  test1.launch.xml
rmf_ws/src/project/project_maps/: CMakeLists.txt
rmf_ws/src/project/project_maps/maps/roscon/: roscon.building.yaml
rmf_ws/src/project/project_simulation/: CMakeLists.txt  package.xml
rmf_ws/src/project/project_simulation/launch/: simulation.launch.xml  td.launch.xml  test1.launch.xml
(+36 files in other folders)
